this is the second commit for the website

--- a/index.html
+++ b/index.html
@@ -31,18 +31,27 @@
         <h2>H i</h2>
         <h1>I' m Asim</h1>
         <h3>Web Developer</h3>
-        <h4>Front end Developer / Freelancer</h4>
+        <h4 data-text="Front end Developer  .">Front end Developer .</h4>
         <div class="contact-logo">
           <ul>
-            <li><a href="">Linkdin</a></li>
-            <li><a href="">Twitter</a></li>
-            <li><a href="">Instagram</a></li>
-            <li><a href="">Github</a></li>
+            <li>
+              <a href=""><img src="logos/linkedin.png" alt="" srcset="" /></a>
+            </li>
+
+            <li>
+              <a href=""><img src="logos/github.png" alt="" srcset="" /></a>
+            </li>
+            <li>
+              <a href=""><img src="logos/twitter2.png" alt="" srcset="" /></a>
+            </li>
+            <li>
+              <a href=""><img src="logos/instagram.png" alt="" srcset="" /></a>
+            </li>
           </ul>
         </div>
 
         <button>Projects</button>
-        <button>See my Resume</button>
+        <button>Resume</button>
       </section>
       <footer>Made by &copy Asim junedi</footer>
     </div>
