--- a/index.html
+++ b/index.html
@@ -4,26 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.0/css/font-awesome.css"
+    />
     <link rel="stylesheet" href="main.css" />
     <title>Asim Website</title>
   </head>
   <body>
     <div class="container">
-      <header class="header">
+      <header class="navbar">
         <div class="logo">
-          <img src="logo.png" alt="logo" srcset="" />
+          <a href="index.html"><img src="logo.png" alt="logo" /> </a>
+          <i class="fa fa-align-justify show" id="tog"></i>
         </div>
-        <nav>
+        <nav class="link hide">
           <ul>
-            <li>
-              <a href="">About me</a>
-            </li>
-            <li>
-              <a href="">Projects</a>
-            </li>
-            <li>
-              <a href="">Blogs</a>
-            </li>
+            <li><a href="index.html">About me</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="blogs.html">Blog</a></li>
           </ul>
         </nav>
       </header>
@@ -31,29 +30,39 @@
         <h2>H i</h2>
         <h1>I' m Asim</h1>
         <h3>Web Developer</h3>
-        <h4 data-text="Front end Developer  .">Front end Developer .</h4>
+        <h4 data-text="Front End Web Developer .">Front End Web Developer .</h4>
         <div class="contact-logo">
           <ul>
             <li>
-              <a href=""><img src="logos/linkedin.png" alt="" srcset="" /></a>
+              <a href="https://www.linkedin.com/in/mohmmad-asim-405586207/"
+                ><img src="logos/linkedin.png" alt="" srcset=""
+              /></a>
             </li>
 
             <li>
-              <a href=""><img src="logos/github.png" alt="" srcset="" /></a>
+              <a href="https://github.com/mohmmadasim07"
+                ><img src="logos/github.png" alt="" srcset=""
+              /></a>
             </li>
             <li>
-              <a href=""><img src="logos/twitter2.png" alt="" srcset="" /></a>
+              <a href="https://twitter.com/asim14278008"
+                ><img src="logos/twitter2.png" alt="" srcset=""
+              /></a>
             </li>
             <li>
-              <a href=""><img src="logos/instagram.png" alt="" srcset="" /></a>
+              <a href="https://www.instagram.com/a.j_dev/"
+                ><img src="logos/instagram.png" alt="" srcset=""
+              /></a>
             </li>
           </ul>
         </div>
-
-        <button>Projects</button>
-        <button>Resume</button>
+        <div class="contact-btn">
+          <button><a href="projects.html"> Projects</a></button>
+          <button><a href="#">Resume</a></button>
+        </div>
       </section>
       <footer>Made by &copy Asim junedi</footer>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
